Fixed Wrapping issue by adding a media query + overscroll-x property when page size shrinks to a certain point

--- a/src/components/UserProfile/Badge.css
+++ b/src/components/UserProfile/Badge.css
@@ -88,7 +88,7 @@
 
 .badge_featured_container {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: none;
   overflow-y: none;
 }
 
@@ -128,4 +128,12 @@
 
 .badge_info_icon_text {
   text-align: left;
+}
+
+@media (max-width: 1199px) {
+  .badge_featured_container {
+    flex-wrap: none;
+    overflow-y: hidden;
+    overflow-x: scroll;
+  }
 }
